objects/Product_Line__c.object
<CustomObject>
    <description>Object to store the association between SAP Business Area, Division and Product Line</description>
    <fields>
        <fullName>BU_Code__c</fullName>
        <label>BU Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turolla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydro Gear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwarzmueller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valmova</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Description__c</fullName>
        <label>Business Unit Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Code__c</fullName>
        <externalId>true</externalId>
        <label>PL Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Line_Description__c</fullName>
        <label>Product Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Line_Description__c</columns>
        <columns>Family__c</columns>
        <columns>Business_Unit_Description__c</columns>
        <columns>Division__c</columns>
        <columns>Business_Org__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PL_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>